FIPS-425 Improved performance of findEnumValue by extending the unique identifier cache